# LAM_Communication_Agent

./: .gitignore  DEV_LOGS.md  GATEWAY_ACCESS_CONTRACT.md  IDENTITY.md  LICENSE  README.md  ROADMAP.md  SYSTEM_STATE.md  TASK_MAP.md  WB01_LAM_COMM_AGENT_ANALYSIS_2026-02-17.md  WORKFLOW_SNAPSHOT_STATE.md  pyproject.toml  start.py
.github/workflows/: ci.yml
contract/: PHASE_C_MEMORY_COMM_CONTRACT_V1.md  PHASE_D_TRANSPORT_COMM_CONTRACT_V1.md  PHASE_E_FLOW_CONTROL_COMM_CONTRACT_V1.md  PHASE_F_P0_SAFETY_COMM_CONTRACT_V1.md  PHASE_R_RESEARCH_GATE_COMM_CONTRACT_V1.md
devkit/: check.sh
docs/: AGENTS.md
gov/report/: phaseA_t009_t010_closure_2026-03-05.md  phaseB_lam_communication_owner_closure_2026-03-05.md  phaseB_lam_communication_owner_closure_2026-03-05.sha256  phaseC_lam_communication_wave1_execution_2026-03-05.md  phaseD_lam_communication_transport_wave1_execution_2026-03-05.md  phaseE_lam_communication_flow_control_wave1_execution_2026-03-05.md  phaseF_lam_communication_p0_safety_wave1_execution_2026-03-05.md  (+1 more)
reqs/: requirements.txt
scripts/: test_entrypoint.sh
src/: __init__.py  __main__.py  main.py
src/agents/: com_agent.py
tests/: test_com_agent_fallback_logging.py  test_comm_agent_trace_span_passthrough.py  test_comm_envelope_and_credit_contract.py  test_governance_artifacts.py  test_phase_b_patch_runtime_contract.py  test_phase_c_memory_comm_contract.py  test_phase_d_transport_comm_contract.py  test_phase_e_flow_control_comm_contract.py  test_phase_f_p0_safety_comm_contract.py  test_phase_r_research_gate_comm_contract.py  test_test_entrypoint_contract.py
(+4 files in other folders)
